--- a/carrito/src/main/resources/application.properties
+++ b/carrito/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8082
+spring.application.name=carrito-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/service_carrito
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
